--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,13 +1,7 @@
-<h1>Articles</h1>
-
-<ul>
-  <% @articles.each do |article| %>
-    <% unless article.archived? %>
-      <li>
-        <%= link_to article.title, article %>
-      </li>
-    <% end %>
-  <% end %>
-</ul>
-
-<%= link_to "New Article", new_article_path %>
+<section class="section">
+  <div class="container">
+    <div class="columns">
+      <%= render 'feed' %>
+    </div>
+  </div>
+</section>
