--- a/app/views/articles/_feed.html.erb
+++ b/app/views/articles/_feed.html.erb
@@ -10,8 +10,8 @@
       <article class="media">
         <div class="media-content">
           <div class="content">
-            <strong>Vitalii Kindrat</strong><br>
-            <small>@nick</small><br>
+            <strong><%= article.user.name %></strong><br>
+            <small><%= article.user.username %></small><br>
             <p><%= article.title %></p>
           </div>
           <nav class="level">
