--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -7,5 +7,5 @@
       wrapper: false, label_html: {class: "label"}, placeholder: "Write post`s text here" %>
     </div>
 </div>
-<%= article.button :submit, class: "button is-info" %>
+<%= article.button :submit, class: "button is-link" %>
 <% end %>
