--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
       </div>
     <% end %>
 
-    <nav class="navbar is-dark">
+    <nav class="navbar is-link">
       <div class="navbar-brand">
         <%= link_to root_path, class: "navbar-item" do %>
           <h1 class="title is-4 has-text-white">Blog</h1>
@@ -41,7 +41,13 @@
             <p class="control">
               <%= link_to 'New Post', new_article_path, class: "button is-inverted" %>
             </p>
-            <p class="control">Sign Up</p>
+            <% if user_signed_in?%>
+              <p class="control"><%= link_to current_user.name, edit_user_registration_path, class: "button is-link" %></p>
+              <p><%= link_to "Log out", destroy_user_session_path, method: :delete, class: "button is-link" %></p>
+            <% else %>
+              <p class="control"><%= link_to 'Sign In', new_user_session_path, class: "button is-link" %></p>
+              <p class="control"><%= link_to 'Sign Up',new_user_registration_path, class: "button is-link" %></p>
+            <% end %>
           </div>
         </div>
       </div>
