Add paginataion, who to follow section. Finish the basic structure of project

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,12 @@
  *= require_self
  */
  @import "bulma";
+
+ .image {
+  img {
+    border-radius: 50%;
+  }
+ }
+ .notification:not(:last-child) {
+  margin-bottom: 0;
+ }
