--- a/app/views/articles/_feed.html.erb
+++ b/app/views/articles/_feed.html.erb
@@ -1,44 +1,58 @@
 <div class="column is-half">
+  <div class="field">
+    <div class="control">
+      <%= label: "Edit article title here", input_html: { class: "input"},
+      wrapper: false, label_html: {class: "label"}, placeholder: "Search for articles here" %>
+    </div>
+  </div>
+
+  <% if current_user.username == @user.username %>
   <article class="media box">
     <div class="media-content">
-      <%= render 'form' %>
+      <%= render 'articles/form' %>
     </div>
   </article>
+  <% end %>
 
-  <% @articles.each do | article | %>
-    <div class="box">
-      <article class="media">
-        <div class="media-content">
-          <div class="content">
-            <strong><%= article.user.name %></strong><br>
-            <small><%= article.user.username %></small><br>
-            <p><%= article.title %></p>
-          </div>
-          <nav class="level">
-            <div class="level-left is-mobile">
-
-              <%= link_to article, class: "level-item" do %>
-                <span class="icon">
-                  <i class="fa fa-link" aria-hidden="true"></i>
-                </span>
-              <% end %>
-
-              <%= link_to edit_article_path(article), class: "level-item" do %>
-                <span class="icon">
-                  <i class="fa fa-pencil" aria-hidden="true"></i>
-                </span>
-              <% end %>
-
-              <%= link_to article, method: :delete, data: { confirm: "Are you really want to delete this post?"} do %>
-                <span class="icon">
-                  <i class="fa fa-trash-o" aria-hidden="true"></i>
-                </span>
-              <% end %>
-
+    <% @articles.each do | article | %>
+      <div class="box">
+        <article class="media">
+          <div class="media-content">
+            <div class="content">
+              <strong><%= article.user.name %></strong><br>
+              <small><%= '@' + article.user.username %></small><br>
+              <p><%= article.title %></p>
+              <p><%= article.body %></p>
             </div>
-          </nav>
-        </div>
-      </article>
-    </div>
-    <% end %>
+
+            <nav class="level">
+              <div class="level-left is-mobile">
+
+                <%= link_to article, class: "level-item" do %>
+                  <span class="icon">
+                    <i class="fa fa-comment" aria-hidden="true"></i>
+                  </span>
+                <% end %>
+
+                <% if current_user.username == article.user.username %>
+                  <%= link_to edit_article_path(article), class: "level-item" do %>
+                    <span class="icon">
+                      <i class="fa fa-pencil" aria-hidden="true"></i>
+                    </span>
+                  <% end %>
+
+                  <%= link_to article, method: :delete, data: { confirm: "Are you really want to delete this post?"} do %>
+                    <span class="icon">
+                      <i class="fa fa-trash-o" aria-hidden="true"></i>
+                    </span>
+                  <% end %>
+                <% end %>
+
+              </div>
+            </nav>
+          </div>
+        </article>
+      </div>
+      <% end %>
+    <%= will_paginate @articles %>
 </div>
