--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,3 +1,22 @@
-<!-- <h1>Edit Article</h1>
+<div class="section">
+	<div class="container">
+		<div class="columns is-centered">
+			<div class="column is-half">
+				<h1 class="title">Editing Article</h1>
 
-<%= render "form", article: @article %> -->
+        <%= simple_form_for(@article) do |article| %>
+        <div class="field">
+            <div class="control">
+              <%= article.input :title, label: "Edit article title here", input_html: { class: "input", value: @article.title},
+              wrapper: false, label_html: {class: "label"}, placeholder: "Write post`s title here" %>
+              <%= article.input :body, label: "Edit article body here", input_html: { class: "textarea", value: @article.body},
+              wrapper: false, label_html: {class: "label"}, placeholder: "Write post`s text here", value: "Yoy" %>
+            </div>
+          </div>
+          <%= article.submit "Edit article", class: "button is-link" %>
+        <% end %>
+
+			</div>
+		</div>
+	</div>
+</div>
