--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,9 @@
 <section class="section">
   <div class="container">
     <div class="columns">
-      <%= render 'feed' %>
+      <%= render "profile" %>
+      <%= render "articles/feed"%>
+      <%= render "search" %>
     </div>
   </div>
 </section>
