--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,9 @@
 <section class="section">
   <div class="container">
     <div class="columns">
-      <%= render "profile" %>
+      <%= render "users/profile" %>
       <%= render "articles/feed"%>
-      <%= render "search" %>
+      <%= render "users/search" %>
     </div>
   </div>
 </section>
