--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -10,7 +10,7 @@
               <%= article.input :title, label: "Edit article title here", input_html: { class: "input", value: @article.title},
               wrapper: false, label_html: {class: "label"}, placeholder: "Write post`s title here" %>
               <%= article.input :body, label: "Edit article body here", input_html: { class: "textarea", value: @article.body},
-              wrapper: false, label_html: {class: "label"}, placeholder: "Write post`s text here", value: "Yoy" %>
+              wrapper: false, label_html: {class: "label"}, placeholder: "Write post`s text here" %>
             </div>
           </div>
           <%= article.submit "Edit article", class: "button is-link" %>
