--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,17 +1,12 @@
-<%= form_with model: [ @article, @article.comments.build ] do |form| %>
-  <p>
-    <%= form.label :commenter %><br>
-    <%= form.text_field :commenter %>
-  </p>
-  <p>
-    <%= form.label :body %><br>
-    <%= form.text_area :body %>
-  </p>
-  <p>
-    <%= form.label :status %><br>
-    <%= form.select :status, ['public', 'private', 'archived'], selected: 'public' %>
-  </p>
-  <p>
-    <%= form.submit %>
-  </p>
+<%# This doesnt work. Fix form for nested resource %>
+<%= simple_form_with([@article, @article.comments.build]) do |form| %>
+  <div class="field">
+    <div class="control">
+      <%= form.input :body, input_html: {class: 'textarea'}, wrapper: false, label_html: {class: 'label'} %>
+    </div>
+    <div class="control">
+      <%= form.input :commenter, wrapper: false, :as => :hidden, :input_html => { :value => current_user.username } %>
+    </div>
+  </div>
+  <%= form.button :submit, class: "button is-link" %>
 <% end %>
