--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,5 +1,4 @@
-<%# This doesnt work. Fix form for nested resource %>
-<%= simple_form_with([@article, @article.comments.build]) do |form| %>
+<%= simple_form_for([@article, @article.comments.build]) do |form| %>
   <div class="field">
     <div class="control">
       <%= form.input :body, input_html: {class: 'textarea'}, wrapper: false, label_html: {class: 'label'} %>
