--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,71 +1,67 @@
 <div class="box">
-  <article class="media">
-    <div class="media-content">
-      <div class="content">
-        <strong><%= @article.user.name %></strong><br>
-        <small><%= '@' + @article.user.username %></small><br>
-        <p><%= @article.title %></p>
-        <p><%= @article.body %></p>
-      </div>
-
-      <nav class="level">
-        <div class="level-left is-mobile">
-
-          <% if current_user.username == @article.user.username %>
-            <%= link_to edit_article_path(@article), class: "level-item" do %>
-              <span class="icon">
-                <i class="fa fa-pencil" aria-hidden="true"></i>
-              </span>
-            <% end %>
-
-            <%= link_to @article, method: :delete, data: { confirm: "Are you really want to delete this post?"} do %>
-              <span class="icon">
-                <i class="fa fa-trash-o" aria-hidden="true"></i>
-              </span>
-            <% end %>
-          <% end %>
-
-        </div>
-      </nav>
-    </div>
-  </article>
-</div>
-
-<div class="comment-form">
-  <%= render 'form' %>
-</div>
-
-<% @comments.each do | comment | %>
-  <div class="box">
-    <article class="media">
-      <div class="media-content">
-        <div class="content">
-          <strong><%= comment.commenter %></strong><br>
-          <p><%= comment.body %></p>
-        </div>
-
-        <nav class="level">
-          <div class="level-left is-mobile">
-
-            <% if current_user.username == comment.commenter%>
-              <%= link_to edit_article_comment_path(@article, comment), class: "level-item" do %>
-                <span class="icon">
-                  <i class="fa fa-pencil" aria-hidden="true"></i>
-                </span>
-              <% end %>
-            <% end %>
-
-            <% if current_user.username == comment.commenter or current_user.username == @article.user.username %>
-              <%= link_to [comment.article, comment], method: :delete, data: { confirm: "Are you really want to delete this comment?"} do %>
-                <span class="icon">
-                  <i class="fa fa-trash-o" aria-hidden="true"></i>
-                </span>
-              <% end %>
-            <% end %>
-
+  <div class="columns is-centered">
+    <div class="column is-half">
+      <article class="media">
+        <div class="media-content">
+          <div class="content">
+            <strong><%= @article.user.name %></strong><br>
+            <small><%= '@' + @article.user.username %></small><br>
+            <p><%= @article.title %></p>
+            <p><%= @article.body %></p>
           </div>
-        </nav>
+
+          <nav class="level">
+            <div class="level-left is-mobile">
+
+              <% if current_user.username == @article.user.username %>
+                <%= link_to edit_article_path(@article), class: "level-item" do %>
+                  <span class="icon">
+                    <i class="fa fa-pencil" aria-hidden="true"></i>
+                  </span>
+                <% end %>
+
+                <%= link_to @article, method: :delete, data: { confirm: "Are you really want to delete this post?"} do %>
+                  <span class="icon">
+                    <i class="fa fa-trash-o" aria-hidden="true"></i>
+                  </span>
+                <% end %>
+              <% end %>
+            </div>
+          </nav>
+        </div>
+      </article>
+
+      <div class="comment-form">
+        <%= render 'form' %>
       </div>
-    </article>
+
+      <div class="level"></div>
+
+        <% @comments.each do | comment | %>
+          <div class="box">
+            <article class="media">
+              <div class="media-content">
+                <div class="content">
+                  <strong><%= comment.commenter %></strong><br>
+                  <p><%= comment.body %></p>
+                </div>
+
+                <nav class="level">
+                  <div class="level-left is-mobile">
+                    <% if current_user.username == comment.commenter or current_user.username == @article.user.username %>
+                      <%= link_to [comment.article, comment], method: :delete, data: { confirm: "Are you really want to delete this comment?"} do %>
+                        <span class="icon">
+                          <i class="fa fa-trash-o" aria-hidden="true"></i>
+                        </span>
+                      <% end %>
+                    <% end %>
+                  </div>
+                </nav>
+
+              </div>
+            </article>
+          </div>
+        <% end %>
+      </div>
+    </div>
   </div>
-<% end %>
